tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__view__contract_view_stats_help.snap
---
source: tests/e2e/machine_contract/view.rs
expression: stdout
---
Show statistics about the vault

Usage: obsidian-cli-inspector view stats [OPTIONS]

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
