tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__view__machine_contract_describe.snap
---
source: tests/e2e/machine_contract/view.rs
expression: normalize_for_snapshot(output)
---
{
  "command": "view.describe",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "filename": "Home"
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP"
}
